fix stars and alignements

--- a/src/style/About.css
+++ b/src/style/About.css
@@ -11,7 +11,7 @@
     padding: 0px 100px;
 }
 
-.moutain {
+.mountain {
     width: 100%;
     height: 223px;
     border-radius: 25px;
@@ -29,8 +29,16 @@
         padding: 0;
     }
 
-    .moutain {
+    .mountain {
         border-radius: 10px;
         height: 111px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .mountain {
+        width: 90%;
+        margin: auto;
+        display: block;
     }
 }
