--- a/src/style/Accomodation.css
+++ b/src/style/Accomodation.css
@@ -66,23 +66,6 @@
     justify-content: flex-end;
 }
 
-.empty-star-container {
-    display: flex;
-    justify-content: flex-end;
-    position: absolute;
-    top: 27px;
-    right: 5px;
-}
-
-.filled-star-container {
-    display: flex;
-    justify-content: flex-end;
-    position: absolute;
-    z-index: 20;
-    top: 27px;
-    right: 5px;
-}
-
 .star {
     height: 23px;
     width: 23px;
@@ -92,8 +75,7 @@
 .accomodation-stars {
     display: flex;
     justify-content: flex-end;
-    flex-direction: column;
-    position: relative;
+    padding-top: 25px;
 }
 
 .user {
@@ -127,6 +109,11 @@
         flex-direction: column;
     }
 
+    .accomodation-stars {
+        justify-content: flex-start;
+        margin-top: -12px;
+    }
+
     .accomodation-title {
         font-size: 18px;
     }
@@ -146,12 +133,12 @@
         position: static;
         width: 100%;
         height: 50px;
-        flex-direction: column-reverse;
-        justify-content: center;
+        flex-direction: row-reverse;
+        justify-content: space-between;
     }
 
     .accomodation-host {
-        display: flex;
+        display: flex-end;
         align-items: center;
     }
 
@@ -166,20 +153,6 @@
         display: flex;
         height: 32px;
         width: 32px;
-    }
-
-    .empty-star-container {
-        display: flex;
-        top: 5px;
-        justify-content: flex-start;
-        left: -10px;
-    }
-
-    .filled-star-container {
-        display: flex;
-        top: 5px;
-        left: -10px;
-        justify-content: flex-start;
     }
 
     .collapse-container {
@@ -210,7 +183,7 @@
 
     .accomodation-host p {
         display: flex;
-        width: 20%;
+        width: 40%;
         font-size: 12px;
         line-height: 15px;
     }
