--- a/src/style/banner.css
+++ b/src/style/banner.css
@@ -1,9 +1,10 @@
 .home-banner {
     height: 223px;
-    width: 100%;
+    width: 99%;
     position: relative;
     background-color: black;
     border-radius: 25px;
+    overflow: hidden;
 }
 
 .home-banner img {
@@ -12,6 +13,7 @@
     border-radius: 25px;
     object-fit: cover;
     opacity: 0.7;
+    margin-left: 0px;
 }
 
 .home-banner h1 {
@@ -47,5 +49,12 @@
 
     .line-break {
         display: inline;
+    }
+
+    @media screen and (max-width: 650px) {
+        .home-banner {
+            width: 305px;
+            margin: auto;
+        }
     }
 }
