--- a/src/style/card.css
+++ b/src/style/card.css
@@ -1,11 +1,20 @@
 .home-card {
     max-width: 340px;
     height: 340px;
-    background: linear-gradient(180deg,
-            linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%));
     border-radius: 10px;
     position: relative;
     overflow: hidden;
+}
+
+.home-card::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 80px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 50%);
+    z-index: 1;
 }
 
 .home-card img {
@@ -14,6 +23,7 @@
     border-radius: 10px;
     object-fit: cover;
     transition: transform 0.4s ease-in-out;
+    z-index: -1;
 }
 
 .home-card:hover img {
@@ -28,6 +38,7 @@
     bottom: 20px;
     left: 20px;
     max-width: 200px;
+    z-index: 2;
 }
 
 @media screen and (max-width: 950px) {
